# Schach

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  .gitignore  Diagram.drawio  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
backend/core/: settings.py
backend/database/: repository.py
backend/enums/: game_enums.py
backend/message_queue/: messages.py  rabbitmq.py
backend/models/: game_models.py  user_models.py
backend/routers/: auth.py  game.py  websocket.py
backend/schemas/: __init__.py  game.py  game_schemas.py
backend/services/: __init__.py  auth_service.py  game_service.py
backend/tests/: conftest.py  test_fools_mate.py  test_scholars_mate.py
backend/utils/: chess_utils.py
e2e-tests/: README.md  package-lock.json  package.json  playwright.config.js  run-tests.sh
e2e-tests/pages/: ChessGamePage.js
e2e-tests/tests/: fastest-stalemate.spec.js  fools-mate-blitz.spec.js  fools-mate.spec.js  game-flow.spec.js  general-functionality.spec.js  scholars-mate-blitz.spec.js  scholars-mate.spec.js  smoke.spec.js
e2e-tests/utils/: ChessTestUtils.js
frontend/: .dockerignore  Dockerfile  README.md  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/: AuthPage.jsx  ChessBoard.jsx  GameInfo.jsx  GamePage.jsx  GamePageDemo.jsx  GameResultModal.jsx  GameSetupPage.jsx  GameTimer.jsx  LandingPage.jsx  MoveHistory.jsx
frontend/src/hooks/: useGameLogic.js  usePieceSelection.js
frontend/src/services/: api.js  websocket.js
(+2 files in other folders)
